<resources>
    <string name="app_name">HeServices</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="redirectToRegister" />
    <string name="emailRegister">Email</string>
    <string name="passwordRegister">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="existing_user">Already have an account?</string>
    <string name="toLogout">To Logout</string>
    <string name="emailSignUp">Email</string>
    <string name="passwordSignUp">Password</string>
    <string name="phoneNo">Tel</string>
    <string name="usernameSignUp">username</string>
    <string name="nameSignUp">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerAccount" />
    <string name="redirectToLgin" />
    <string name="onGoogleLogin" />
    <string name="goToRegister" />
    <string name="goToEmail" />
    <string name="singIn" />
    <string name="expressServicePage" />


</resources>