<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:background="@drawable/round_border2"
        android:drawableStart="@android:drawable/sym_action_email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287"
        tools:hint="@string/emailRegister"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:background="@drawable/round_border2"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/passwordRegister"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:background="@drawable/round_border2"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border2"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <TextView
        android:id="@+id/register_user1"
        android:layout_width="172dp"
        android:layout_height="25dp"
        android:text="@string/existing_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/loginBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border2"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/googleLog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        app:srcCompat="@drawable/google"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>